[gd_scene load_steps=39 format=3 uid="uid://bh52j8kscnprc"]

[ext_resource type="Texture2D" uid="uid://inusy26ncr0o" path="res://assets/sprite.png" id="1_8sf23"]
[ext_resource type="PackedScene" uid="uid://g40wu5scfhpc" path="res://scene/Component/Health.tscn" id="1_he5rk"]
[ext_resource type="Script" path="res://src/Boss/Boss1.gd" id="1_qd2pc"]
[ext_resource type="Script" path="res://src/Boss/Core.gd" id="2_0175r"]
[ext_resource type="PackedScene" uid="uid://csw7fbg0tf7eu" path="res://scene/Component/sprite.tscn" id="2_sadoc"]
[ext_resource type="Shader" path="res://resources/shaders/FlashDamage.gdshader" id="3_p3lbv"]
[ext_resource type="PackedScene" uid="uid://2q685qh536nx" path="res://scene/Component/Inventory.tscn" id="5_ok081"]
[ext_resource type="PackedScene" uid="uid://ctgqlbgcwqhfr" path="res://scene/Component/AttackComponent.tscn" id="7_m4s3v"]
[ext_resource type="Script" path="res://src/Boss/Boss1BaseTurret.gd" id="7_r1qkv"]
[ext_resource type="PackedScene" uid="uid://dnqrn0ge4xuq4" path="res://scene/Enemy/enemy_bullet.tscn" id="7_xfg76"]
[ext_resource type="Script" path="res://src/TurretEnemy.gd" id="8_s8ems"]
[ext_resource type="Texture2D" uid="uid://b8uccwstgkowj" path="res://assets/particles/explosion.png" id="12_pm362"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oaxtv"]
size = Vector2(291, 197)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sh28h"]
resource_local_to_scene = true
shader = ExtResource("3_p3lbv")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = false

[sub_resource type="AtlasTexture" id="AtlasTexture_fgh2d"]
atlas = ExtResource("1_8sf23")
region = Rect2(32, 112, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwl15"]
atlas = ExtResource("1_8sf23")
region = Rect2(32, 112, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vinge"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgh2d")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwl15")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5xjcn"]
size = Vector2(30, 23)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_utwua"]
resource_local_to_scene = true
shader = ExtResource("3_p3lbv")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = false

[sub_resource type="AtlasTexture" id="AtlasTexture_nlikj"]
atlas = ExtResource("1_8sf23")
region = Rect2(0, 112, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_dnt3r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlikj")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t2ffp"]
size = Vector2(22, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f4gy7"]
resource_local_to_scene = true
shader = ExtResource("3_p3lbv")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = false

[sub_resource type="AtlasTexture" id="AtlasTexture_18dkx"]
atlas = ExtResource("1_8sf23")
region = Rect2(0, 128, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_uk4hc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_18dkx")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lskgn"]
resource_local_to_scene = true
shader = ExtResource("3_p3lbv")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_10ru2"]
resource_local_to_scene = true
shader = ExtResource("3_p3lbv")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = false

[sub_resource type="AtlasTexture" id="AtlasTexture_b1deq"]
atlas = ExtResource("1_8sf23")
region = Rect2(0, 144, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_v0tyw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1deq")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1deq")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ks4fh"]
size = Vector2(13, 12)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kgw8u"]
resource_local_to_scene = true
shader = ExtResource("3_p3lbv")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b3uta"]
resource_local_to_scene = true
shader = ExtResource("3_p3lbv")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f8oue"]
resource_local_to_scene = true
shader = ExtResource("3_p3lbv")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_25f3p"]
resource_local_to_scene = true
shader = ExtResource("3_p3lbv")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jtapv"]
resource_local_to_scene = true
shader = ExtResource("3_p3lbv")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7lofc"]
resource_local_to_scene = true
shader = ExtResource("3_p3lbv")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = false

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_v38ni"]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fo3tg"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(25, 25, 1)
gravity = Vector3(0, 0, 0)
scale_min = 0.5
anim_speed_min = 1.0
anim_speed_max = 1.0

[node name="Boss1" type="Node2D" groups=["enemy_boss"]]
script = ExtResource("1_qd2pc")
metadata/_edit_horizontal_guides_ = [-16.0]

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(5, 45.5)
shape = SubResource("RectangleShape2D_oaxtv")

[node name="Core" type="StaticBody2D" parent="."]
script = ExtResource("2_0175r")

[node name="Marker" type="Marker2D" parent="Core"]
position = Vector2(0, 8)

[node name="Sprite" parent="Core" instance=ExtResource("2_sadoc")]
material = SubResource("ShaderMaterial_sh28h")
sprite_frames = SubResource("SpriteFrames_vinge")
animation = &"shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Core"]
position = Vector2(0, -4.5)
shape = SubResource("RectangleShape2D_5xjcn")

[node name="Health" parent="Core" instance=ExtResource("1_he5rk")]

[node name="Cooldown" type="Timer" parent="Core"]

[node name="LeftBaseTurret" type="StaticBody2D" parent="." groups=["enemy"]]
position = Vector2(-41, -8)
script = ExtResource("7_r1qkv")

[node name="Health" parent="LeftBaseTurret" instance=ExtResource("1_he5rk")]

[node name="Sprite" parent="LeftBaseTurret" instance=ExtResource("2_sadoc")]
material = SubResource("ShaderMaterial_utwua")
sprite_frames = SubResource("SpriteFrames_dnt3r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftBaseTurret"]
shape = SubResource("RectangleShape2D_t2ffp")

[node name="Left" parent="LeftBaseTurret" instance=ExtResource("2_sadoc")]
material = SubResource("ShaderMaterial_f4gy7")
position = Vector2(-8, 16)
sprite_frames = SubResource("SpriteFrames_uk4hc")

[node name="Right" parent="LeftBaseTurret" instance=ExtResource("2_sadoc")]
material = SubResource("ShaderMaterial_lskgn")
position = Vector2(8, 16)
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_uk4hc")

[node name="LeftTurret" type="StaticBody2D" parent="LeftBaseTurret" groups=["enemy"]]
position = Vector2(-8, 13)

[node name="Health" parent="LeftBaseTurret/LeftTurret" instance=ExtResource("1_he5rk")]

[node name="Inventory" parent="LeftBaseTurret/LeftTurret" instance=ExtResource("5_ok081")]
basic = ExtResource("7_xfg76")
special = null

[node name="AttackComponent" parent="LeftBaseTurret/LeftTurret" instance=ExtResource("7_m4s3v")]
basic_firerate = 2.0
basic_bullet_damage = 5
raw_direction = true

[node name="TurretComponent" type="Node" parent="LeftBaseTurret/LeftTurret"]
script = ExtResource("8_s8ems")
shoot = false

[node name="Barrel" type="Marker2D" parent="LeftBaseTurret/LeftTurret"]
position = Vector2(29, 1)

[node name="Sprite" parent="LeftBaseTurret/LeftTurret" instance=ExtResource("2_sadoc")]
material = SubResource("ShaderMaterial_10ru2")
position = Vector2(-0.111292, 0.813667)
sprite_frames = SubResource("SpriteFrames_v0tyw")
animation = &"shoot"
offset = Vector2(11.1113, 0.186331)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftBaseTurret/LeftTurret"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ks4fh")

[node name="RightTurret" type="StaticBody2D" parent="LeftBaseTurret" groups=["enemy"]]
position = Vector2(8, 13)

[node name="Health" parent="LeftBaseTurret/RightTurret" instance=ExtResource("1_he5rk")]

[node name="Inventory" parent="LeftBaseTurret/RightTurret" instance=ExtResource("5_ok081")]
basic = ExtResource("7_xfg76")
special = null

[node name="AttackComponent" parent="LeftBaseTurret/RightTurret" instance=ExtResource("7_m4s3v")]
basic_firerate = 2.0
basic_bullet_damage = 5
raw_direction = true

[node name="TurretComponent" type="Node" parent="LeftBaseTurret/RightTurret"]
script = ExtResource("8_s8ems")
shoot = false

[node name="Barrel" type="Marker2D" parent="LeftBaseTurret/RightTurret"]
position = Vector2(28, 1)

[node name="Sprite" parent="LeftBaseTurret/RightTurret" instance=ExtResource("2_sadoc")]
material = SubResource("ShaderMaterial_kgw8u")
position = Vector2(-0.111292, 0.813667)
sprite_frames = SubResource("SpriteFrames_v0tyw")
offset = Vector2(11.1113, 0.186331)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftBaseTurret/RightTurret"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ks4fh")

[node name="RightBaseTurret" type="StaticBody2D" parent="." groups=["enemy"]]
position = Vector2(41, -8)
script = ExtResource("7_r1qkv")

[node name="Health" parent="RightBaseTurret" instance=ExtResource("1_he5rk")]

[node name="Sprite" parent="RightBaseTurret" instance=ExtResource("2_sadoc")]
material = SubResource("ShaderMaterial_b3uta")
sprite_frames = SubResource("SpriteFrames_dnt3r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightBaseTurret"]
shape = SubResource("RectangleShape2D_t2ffp")

[node name="Left" parent="RightBaseTurret" instance=ExtResource("2_sadoc")]
material = SubResource("ShaderMaterial_f8oue")
position = Vector2(-8, 16)
sprite_frames = SubResource("SpriteFrames_uk4hc")

[node name="Right" parent="RightBaseTurret" instance=ExtResource("2_sadoc")]
material = SubResource("ShaderMaterial_25f3p")
position = Vector2(8, 16)
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_uk4hc")

[node name="LeftTurret" type="StaticBody2D" parent="RightBaseTurret" groups=["enemy"]]
position = Vector2(-8, 13)

[node name="Health" parent="RightBaseTurret/LeftTurret" instance=ExtResource("1_he5rk")]

[node name="Inventory" parent="RightBaseTurret/LeftTurret" instance=ExtResource("5_ok081")]
basic = ExtResource("7_xfg76")
special = null

[node name="AttackComponent" parent="RightBaseTurret/LeftTurret" instance=ExtResource("7_m4s3v")]
basic_firerate = 2.0
basic_bullet_damage = 5
raw_direction = true

[node name="TurretComponent" type="Node" parent="RightBaseTurret/LeftTurret"]
script = ExtResource("8_s8ems")
shoot = false

[node name="Barrel" type="Marker2D" parent="RightBaseTurret/LeftTurret"]
position = Vector2(29, 1)

[node name="Sprite" parent="RightBaseTurret/LeftTurret" instance=ExtResource("2_sadoc")]
material = SubResource("ShaderMaterial_jtapv")
position = Vector2(-0.111292, 0.813667)
sprite_frames = SubResource("SpriteFrames_v0tyw")
animation = &"shoot"
offset = Vector2(11.1113, 0.186331)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightBaseTurret/LeftTurret"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ks4fh")

[node name="RightTurret" type="StaticBody2D" parent="RightBaseTurret" groups=["enemy"]]
position = Vector2(8, 13)

[node name="Health" parent="RightBaseTurret/RightTurret" instance=ExtResource("1_he5rk")]

[node name="Inventory" parent="RightBaseTurret/RightTurret" instance=ExtResource("5_ok081")]
basic = ExtResource("7_xfg76")
special = null

[node name="AttackComponent" parent="RightBaseTurret/RightTurret" instance=ExtResource("7_m4s3v")]
basic_firerate = 2.0
basic_bullet_damage = 5
raw_direction = true

[node name="TurretComponent" type="Node" parent="RightBaseTurret/RightTurret"]
script = ExtResource("8_s8ems")
shoot = false

[node name="Barrel" type="Marker2D" parent="RightBaseTurret/RightTurret"]
position = Vector2(28, 1)

[node name="Sprite" parent="RightBaseTurret/RightTurret" instance=ExtResource("2_sadoc")]
material = SubResource("ShaderMaterial_7lofc")
position = Vector2(-0.111292, 0.813667)
sprite_frames = SubResource("SpriteFrames_v0tyw")
offset = Vector2(11.1113, 0.186331)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightBaseTurret/RightTurret"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ks4fh")

[node name="CoreExplosion" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_v38ni")
emitting = false
amount = 24
process_material = SubResource("ParticleProcessMaterial_fo3tg")
texture = ExtResource("12_pm362")
one_shot = true

[connection signal="body_entered" from="PlayerDetection" to="Core" method="_on_player_detection_body_entered"]
[connection signal="body_entered" from="PlayerDetection" to="LeftBaseTurret/LeftTurret/TurretComponent" method="_on_player_detection_body_entered"]
[connection signal="body_entered" from="PlayerDetection" to="LeftBaseTurret/RightTurret/TurretComponent" method="_on_player_detection_body_entered"]
[connection signal="body_entered" from="PlayerDetection" to="RightBaseTurret/LeftTurret/TurretComponent" method="_on_player_detection_body_entered"]
[connection signal="body_entered" from="PlayerDetection" to="RightBaseTurret/RightTurret/TurretComponent" method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="LeftBaseTurret/LeftTurret/TurretComponent" method="_on_player_detection_body_exited"]
[connection signal="body_exited" from="PlayerDetection" to="LeftBaseTurret/RightTurret/TurretComponent" method="_on_player_detection_body_exited"]
[connection signal="body_exited" from="PlayerDetection" to="RightBaseTurret/LeftTurret/TurretComponent" method="_on_player_detection_body_exited"]
[connection signal="body_exited" from="PlayerDetection" to="RightBaseTurret/RightTurret/TurretComponent" method="_on_player_detection_body_exited"]
[connection signal="death" from="Core/Health" to="." method="_on_core_death"]
[connection signal="death" from="LeftBaseTurret/Health" to="." method="_on_turret_death"]
[connection signal="death" from="LeftBaseTurret/Health" to="LeftBaseTurret" method="_on_base_death"]
[connection signal="death" from="LeftBaseTurret/LeftTurret/Health" to="." method="_on_turret_barrel_death"]
[connection signal="death" from="LeftBaseTurret/RightTurret/Health" to="." method="_on_turret_barrel_death"]
[connection signal="death" from="RightBaseTurret/Health" to="." method="_on_turret_death"]
[connection signal="death" from="RightBaseTurret/Health" to="RightBaseTurret" method="_on_base_death"]
[connection signal="death" from="RightBaseTurret/LeftTurret/Health" to="." method="_on_turret_barrel_death"]
[connection signal="death" from="RightBaseTurret/RightTurret/Health" to="." method="_on_turret_barrel_death"]
